--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,11 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "react-validation": "^3.0.7",
     "redux": "^4.2.0",
